--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "scripts": {
     "watch": "parcel watch",
     "build": "parcel build",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix lib"
   },
   "peerDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-vue": "^8.1.1",
     "parcel": "^2.0.1",
     "prettier": "^2.5.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "vitepress": "^0.20.1"
   }
 }
